--- a/Asspull3X.rc
+++ b/Asspull3X.rc
@@ -85,8 +85,9 @@ BEGIN
         MENUITEM "&Screenshot",                 1004
         MENUITEM "&Dump RAM",                   1005
         MENUITEM "&Memory viewer",              1007
-        MENUITEM "&About",                      1008
+        MENUITEM "&Options",                    1009
     END
+    MENUITEM "&About",                      1008
 END
 
 
@@ -95,13 +96,14 @@ END
 // Dialog
 //
 
-IDD_ABOUT DIALOGEX 0, 0, 345, 112
+IDD_ABOUT DIALOGEX 0, 0, 345, 111
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "E Clunibus Tractum"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "&Cool",IDOK,288,91,50,14
-    CONTROL         VK_NUMPAD7,IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN,7,7,187,98
+    DEFPUSHBUTTON   "&Cool",IDOK,288,90,50,14
+    CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN,7,7,188,100
     LTEXT           "Asspull IIIx\n\nSystem design and emulator by Kawa.\n\nThanks and shoutouts to all of the byuuboard. Except you, Strfry.",IDC_STATIC,200,7,138,78
 END
 
@@ -122,15 +124,27 @@ BEGIN
     PUSHBUTTON      "Eject",IDC_BUTTON2,132,72,42,18,NOT WS_VISIBLE
 END
 
-IDD_MEMVIEWER DIALOGEX 0, 0, 312, 179
+IDD_MEMVIEWER DIALOGEX 0, 0, 312, 180
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Memory viewer"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_COMBO1,123,7,76,64,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Auto-update",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,209,7,96,11
-    CONTROL         "",IDC_STATIC,"Static",SS_OWNERDRAW,7,25,298,147,WS_EX_CLIENTEDGE
-    EDITTEXT        IDC_EDIT1,7,7,109,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_MEMVIEWERDROP,123,7,76,64,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Auto-update",IDC_AUTOUPDATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,209,7,96,11
+    CONTROL         "",IDC_MEMVIEWERGRID,"Static",SS_OWNERDRAW,7,26,298,147,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_MEMVIEWEROFFSET,7,7,109,14,ES_AUTOHSCROLL
+END
+
+IDD_OPTIONS DIALOGEX 0, 0, 160, 63
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
+CAPTION "Options"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "FPS cap",IDC_FPSCAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,146,11
+    CONTROL         "Aspect correction",IDC_ASPECT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,20,146,11
+    CTEXT           "Work in obvious progress.",IDC_STATIC,7,36,146,20,SS_CENTERIMAGE
 END
 
 
@@ -148,7 +162,7 @@ BEGIN
         RIGHTMARGIN, 338
         VERTGUIDE, 200
         TOPMARGIN, 7
-        BOTTOMMARGIN, 105
+        BOTTOMMARGIN, 104
     END
 
     IDD_DEVICES, DIALOG
@@ -164,7 +178,15 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 305
         TOPMARGIN, 7
-        BOTTOMMARGIN, 172
+        BOTTOMMARGIN, 173
+    END
+
+    IDD_OPTIONS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 153
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 56
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -194,6 +216,11 @@ BEGIN
 END
 
 IDD_MEMVIEWER AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_OPTIONS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
