Redesign the device manager.
I really don't want to think of maintaining parity with the custom UI and having to implement *dropdown* lists.

--- a/Asspull3X.rc
+++ b/Asspull3X.rc
@@ -87,7 +87,10 @@ BEGIN
         MENUITEM "&Memory viewer",              1007
         MENUITEM "&Options",                    1009
     END
-    MENUITEM "&About",                      1008
+    POPUP "&Help"
+    BEGIN
+        MENUITEM "&About",                      1008
+    END
 END
 
 
@@ -107,21 +110,22 @@ BEGIN
     LTEXT           "Asspull IIIx\n\nSystem design and emulator by Kawa.\n\nThanks and shoutouts to all of the byuuboard. Except you, Strfry.",IDC_STATIC,200,7,138,78
 END
 
-IDD_DEVICES DIALOGEX 0, 0, 181, 126
+IDD_DEVICES DIALOGEX 0, 0, 344, 110
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Devices"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,67,105,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,124,105,50,14
-    LTEXT           "&Device",IDC_STATIC,6,6,48,12
-    COMBOBOX        IDC_COMBO1,60,6,114,12,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Type",IDC_STATIC,6,24,48,12
-    COMBOBOX        IDC_COMBO2,60,24,114,22,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CTEXT           "This device has no properties.",IDC_STATIC,16,59,150,25,SS_CENTERIMAGE,WS_EX_STATICEDGE
-    EDITTEXT        IDC_EDIT1,7,54,168,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE
-    PUSHBUTTON      "Insert",IDC_BUTTON1,84,72,42,18,NOT WS_VISIBLE
-    PUSHBUTTON      "Eject",IDC_BUTTON2,132,72,42,18,NOT WS_VISIBLE
+    CTEXT           "This device has no properties.",IDC_DEVNONE,194,38,143,12,SS_CENTERIMAGE
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,114,20,223,6
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,115,84,222,1
+    LTEXT           "Header goes here",IDC_HEADER,114,7,223,13
+    LISTBOX         IDC_DEVLIST,7,7,98,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_DEVTYPE,114,27,73,52,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Insert",IDC_DDINSERT,229,42,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "Eject",IDC_DDEJECT,287,42,50,14,NOT WS_VISIBLE
+    DEFPUSHBUTTON   "OK",IDOK,229,89,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,287,89,50,14
+    EDITTEXT        IDC_DDFILE,194,27,143,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE
 END
 
 IDD_MEMVIEWER DIALOGEX 0, 0, 312, 180
@@ -136,7 +140,7 @@ BEGIN
     EDITTEXT        IDC_MEMVIEWEROFFSET,7,7,109,14,ES_AUTOHSCROLL
 END
 
-IDD_OPTIONS DIALOGEX 0, 0, 160, 63
+IDD_OPTIONS DIALOGEX 0, 0, 160, 76
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Options"
@@ -144,7 +148,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "FPS cap",IDC_FPSCAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,146,11
     CONTROL         "Aspect correction",IDC_ASPECT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,20,146,11
-    CTEXT           "Work in obvious progress.",IDC_STATIC,7,36,146,20,SS_CENTERIMAGE
+    CTEXT           "Work in obvious progress.",IDC_STATIC,7,33,146,15,SS_CENTERIMAGE
+    DEFPUSHBUTTON   "&OK",IDOK,103,55,50,14
 END
 
 
@@ -168,9 +173,17 @@ BEGIN
     IDD_DEVICES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 174
+        RIGHTMARGIN, 337
+        VERTGUIDE, 105
+        VERTGUIDE, 114
+        VERTGUIDE, 187
+        VERTGUIDE, 194
+        VERTGUIDE, 279
+        VERTGUIDE, 287
         TOPMARGIN, 7
-        BOTTOMMARGIN, 119
+        BOTTOMMARGIN, 103
+        HORZGUIDE, 27
+        HORZGUIDE, 79
     END
 
     IDD_MEMVIEWER, DIALOG
@@ -186,7 +199,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 153
         TOPMARGIN, 7
-        BOTTOMMARGIN, 56
+        BOTTOMMARGIN, 69
     END
 END
 #endif    // APSTUDIO_INVOKED
