Almost entirely functional devman??

--- a/Asspull3X.rc
+++ b/Asspull3X.rc
@@ -122,7 +122,7 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,115,84,222,1
     LTEXT           "Header goes here",IDC_HEADER,114,7,223,13
     LISTBOX         IDC_DEVLIST,7,7,98,96,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_DEVTYPE,114,27,73,52,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_DEVTYPE,114,27,73,52,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Insert",IDC_DDINSERT,229,42,50,14,NOT WS_VISIBLE
     PUSHBUTTON      "Eject",IDC_DDEJECT,287,42,50,14,NOT WS_VISIBLE
     DEFPUSHBUTTON   "OK",IDOK,287,89,50,14
