Device manager's basically done.
Now to backport the changes that made multiple attached disk drives remember what you put in them, and I can worry about backporting the *window* instead of using a menu maybe. Because interface parity I guess?

--- a/Asspull3X.vcxproj
+++ b/Asspull3X.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -113,9 +113,9 @@
     <ResourceCompile Include="Asspull3X.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Asspull3X.ico" />
-  </ItemGroup>
-  <ItemGroup>
+    <Image Include="res\printer.ico" />
+    <Image Include="res\diskdrive.ico" />
+    <Image Include="res\blank.ico" />
     <Image Include="res\about.bmp" />
     <Image Include="res\Asspull3X.ico" />
   </ItemGroup>
